--- a/index.html
+++ b/index.html
@@ -28,34 +28,17 @@ h1 + h2 {
 </style>
 </head>
 <body>
-<h1>Disa Sketches</h1>
-
-<h2>Entry Form</h2>
-
-<p><a href="form-prototype-1.html">Option 1 (Revised)</a>
-<strike><a href="form-prototype-2.html">Option 2</a></strike>
-<a href="form-prototype-3.html">Option 3</a></p>
-
-<h2>Search / Filter Page</h2>
-
-<p><a href="search-sketch-1.png">Option 1</a>
-<a href="search-sketch-2.png">Option 2</a></p>
-
-<h2>Editor</h2>
-
-<p><a href="editor.svg">Sketch</a></p>
-
-<h2>Wordpress Home Page</h2>
-
-<ul>
-<li><a href="wordpress/option-1/index.html">Option 1</a></li>
-<li><a href="wordpress/option-2/index.html">Option 2</a></li>
-<li><a href="wordpress/option-3/index.html">Option 3</a></li>
-<li><a href="wordpress/option-4/index.html">Option 4</a></li>
-<li><a href="wordpress/option-5/index.html">Option 5</a></li>
-</ul>
-
-<h2>Person Display Window</h2>
-
-<p><a href="display-window/index.html">Link</a></p>
-</body></html>
+This repository has been split into three smaller ones. What you're looking for will
+be in the README of the corresponding repository.
+<dl>
+	<dt><a href="https://github.com/lmcnulty/disa-viewer">disa-viewer</a></dt>
+	<dd>The front-end for viewing database contents</dd>
+	
+	<dt><a href="https://github.com/lmcnulty/disa-forms">disa-forms</a></dt>
+	<dd>The forms for adding entries to the database</dd>
+	
+	<dt><a href="https://github.com/lmcnulty/disa-site">disa-site</a></dt>
+	<dd>The wordpress site introducing DISA to the world</dd>
+</dl>
+</body>
+</html>
